--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,24 +1,52 @@
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-#     branches: [main]
+name: Build Docker Image and Push it to Repo
 
-# - name: Configure AWS Credentials
-#   uses: aws-actions/configure-aws-credentials@v1
-#   with:
-#     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#     aws-region: eu-west-3
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-# - name: Install eksctl
-#   run: |
-#     curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-#     sudo mv /tmp/eksctl /usr/local/bin
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-# - name: Update Kubeconfig
-#   run: eksctl utils write-kubeconfig --cluster romain-voting-app-cluster --region eu-west-3
+    steps:
+    - uses: actions/checkout@v4
 
-# - name: Apply Kubernetes Manifests
-#   run: kubectl apply -f K8s/
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+    - name: Build images
+      run: |
+        docker build ./worker --file ./worker/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/worker:latest
+        docker build ./vote --file ./vote/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/vote:latest
+        docker build ./result --file ./result/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/result:latest
+
+    - name: Push images
+      run: |
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/worker:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/vote:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/result:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+
+    steps:
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-3
+
+    - name: Install eksctl
+      run: |
+        curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+        sudo mv /tmp/eksctl /usr/local/bin
+
+    - name: Update Kubeconfig
+      run: eksctl utils write-kubeconfig --cluster romain-voting-app-cluster --region eu-west-3
+
+    - name: Apply Kubernetes Manifests
+      run: kubectl apply -f K8s/
 
