--- a/k8s/pvc/hauke-pvc-db.yaml
+++ b/k8s/pvc/hauke-pvc-db.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ebs-sc
+  storageClassName: ebs-gp3-sc
   resources:
     requests:
       storage: 5Gi
