--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,6 +47,12 @@ jobs:
     - name: Update Kubeconfig
       run: eksctl utils write-kubeconfig --cluster ${{ secrets.AWS_CLUSTERNAME}} --region ${{ secrets.AWS_REGION}}
     
+    - name: Create Namespace
+      run: kubectl create namespace ${{secrets.NAMESPACE}} --dry-run=client -o yaml | kubectl apply -f -
+
+    - name: Switch to Namespace
+      run: kubectl config set-context --current --namespace=${{secrets.NAMESPACE}}
+
     - name: Apply Kubernetes PVC Manifests
       run: kubectl apply -f K8s/pvc/
     - name: Apply Kubernetes Deployment Manifests
