--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-3
+        aws-region: ${{ secrets.AWS_REGION}}
 
     - name: Install eksctl
       run: |
@@ -54,11 +54,11 @@ jobs:
       run: kubectl config set-context --current --namespace=${{secrets.NAMESPACE}}
 
     - name: Apply Kubernetes PVC Manifests
-      run: kubectl apply -f K8s/pvc/
+      run: kubectl apply -f k8s/pvc/
     - name: Apply Kubernetes Deployment Manifests
-      run: kubectl apply -f K8s/deployment/
+      run: kubectl apply -f k8s/deployment/
     - name: Apply Kubernetes Service Manifests
-      run: kubectl apply -f K8s/services/
+      run: kubectl apply -f k8s/services/
     - name: Apply Kubernetes Ingress Manifests
-      run: kubectl apply -f K8s/ingress/
+      run: kubectl apply -f k8s/ingress/
 
