--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -117,6 +117,7 @@ jobs:
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       github.event_name == 'workflow_dispatch'
     steps:
+    - uses: actions/checkout@v4
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
